Sorting points by angle size added